--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "project management"
   ],
   "dependencies": {
-    "frappe-gantt": "https://github.com/Jorgelmh/gantt.git",
+    "frappe-gantt": "git+https://github.com/Jorgelmh/gantt.git",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
